# crochet

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/crochet/: __init__.py  cli.py  config.py  errors.py  verify.py
src/crochet/ingest/: __init__.py  batch.py  parsers.py  remote.py  validate.py
src/crochet/ir/: __init__.py  diff.py  hash.py  parser.py  schema.py
src/crochet/ledger/: __init__.py  sqlite.py
src/crochet/migrations/: __init__.py  engine.py  operations.py  template.py
src/crochet/scaffold/: __init__.py  node.py  relationship.py
tests/: conftest.py  test_bulk_upsert.py  test_cli.py  test_config.py  test_ingest.py  test_ir.py  test_ledger.py  test_migrations.py  test_parsers.py  test_remote.py  test_scaffold.py  test_validate.py  test_verify.py
