[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crochet"
version = "0.1.0"
description = "Versioned schema & data migrations for neomodel Neo4j graphs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "neomodel>=5.0",
    "click>=8.0",
    "toml>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
crochet = "crochet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crochet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
