[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crochet-migration"
version = "0.1.1"
description = "Versioned schema & data migrations for neomodel Neo4j graphs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Keshav Dial", email = "y.inuyasha@gmail.com" },
]
keywords = ["neo4j", "neomodel", "migrations", "schema", "graph", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "neomodel>=5.0",
    "click>=8.0",
    "toml>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/keshavd/crochet"
Repository = "https://github.com/keshavd/crochet"
Issues = "https://github.com/keshavd/crochet/issues"

[project.scripts]
crochet = "crochet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crochet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
